sources = [
  'argument.cpp',
  'option-options.cpp',
  'exception.cpp',
  'config.cpp',

  'animation.cpp',
  'background.cpp',
  'behavior.cpp',
  'character.cpp',
  'characterhud.cpp',
  'character-select.cpp',
  'command.cpp',
  'compiler.cpp',
  'constraint.cpp',
  'effect.cpp',
  'font.cpp',
  'game.cpp',
  'helper.cpp',
  'item-content.cpp',
  'item.cpp',
  'match.cpp',
  'menu.cpp',
  'network-behavior.cpp',
  'network.cpp',
  'parse-cache.cpp',
  'projectile.cpp',
  'random.cpp',
  'reader.cpp',
  'run-match.cpp',
  'search.cpp',
  'section.cpp',
  'serialize-auto.cpp',
  'serialize.cpp',
  'sff.cpp',
  'sound.cpp',
  'sprite.cpp',
  'stage.cpp',
  'state-controller.cpp',
  'state.cpp',
  'storyboard.cpp',
  'util.cpp',
  'versus.cpp',
  'widgets.cpp',
  'world.cpp',

  'parser/air.cpp',
  'parser/cmd.cpp',
  'parser/def.cpp',
  'parser/parse-exception.cpp',
  'ast/ast.cpp',
]

includes = include_directories('..')
mugen_library = static_library('mugen', sources,
  include_directories: [includes],
  dependencies: [sdl_dependency, zlib_dependency],
  )
