sources = [
  'game/mod.cpp',
  'game/argument.cpp',
  'game/options.cpp',
  'game/nameplacer.cpp',

  'game/adventure_world.cpp',
  'game/character-select.cpp',
  'game/game.cpp',
  'game/move-list.cpp',
  'game/select_player.cpp',
  'game/world.cpp',

  'script/script.cpp',

  'network/cacher.cpp',
  'network/chat_client.cpp',
  'network/chat_server.cpp',
  'network/chat-widget.cpp',
  'network/client.cpp',
  'network/network.cpp',
  'network/network_world_client.cpp',
  'network/network_world.cpp',
  'network/server.cpp',

  'object/actor.cpp',
  'object/alliance.cpp',
  'object/animation.cpp',
  'object/animation_event.cpp',
  'object/animation_trail.cpp',
  'object/attack.cpp',
  'object/buddy_player.cpp',
  'object/cat.cpp',
  'object/character.cpp',
  'object/display_character.cpp',
  'object/draw-effect.cpp',
  'object/effect.cpp',
  'object/enemy.cpp',
  'object/gib.cpp',
  'object/item.cpp',
  'object/network_character.cpp',
  'object/network_player.cpp',
  'object/object_attack.cpp',
  'object/object.cpp',
  'object/object_nonattack.cpp',
  'object/player-common.cpp',
  'object/player.cpp',
  'object/projectile.cpp',
  'object/stimulation.cpp',
  'object/trigger.cpp',

  'factory/object_factory.cpp',
  'level/block.cpp',
  'level/blockobject.cpp',
  'level/cacher.cpp',
  'level/random-scene.cpp',
  'level/scene.cpp',
  'level/utils.cpp',
  'trigger/trigger.cpp',

  'environment/atmosphere.cpp',

]

includes = include_directories('..')
paintown_library = static_library('paintown', sources,
  include_directories: [includes],
  dependencies: [sdl_dependency, zlib_dependency],
  )
