sources = [
  'configuration.cpp',
  'input/keyboard.cpp',
  'file-system.cpp',
  'debug.cpp',
  'funcs.cpp',
  'tokenreader.cpp',
  'token.cpp',
  'exceptions/load_exception.cpp',
  'exceptions/exception.cpp',
  'graphics/bitmap.cpp',
  'graphics/gradient.cpp',
  'system.cpp',
  'version.cpp',
  'argument.cpp',
  'init.cpp',
  'input/input-manager.cpp',
  'input/touch.cpp',
  'input/input-source.cpp',
  'input/joystick.cpp',
  'input/text-input.cpp',
  'sound/music.cpp',
  'sound/sound.cpp',
  'language-string.cpp',
  'font.cpp',
  'font_factory.cpp',
  'regex.cpp',
  'sound/audio.cpp',
  'menu/menu.cpp',
  'menu/font-info.cpp',
  'menu/menu_option.cpp',
  'menu/options.cpp',
  'menu/optionfactory.cpp',
  'loading.cpp',
  'directory.cpp',
  'thread.cpp',
  'utf.cpp',
  'system/sdl/init.cpp',
  'system/sdl2/init.cpp',
  'system/timer.cpp',
  'message-queue.cpp',
  'messages.cpp',
  'resource.cpp',
  'events.cpp',
  'sound/music-player.cpp',
  'sound/music-renderer.cpp',
  'console.cpp',
  'timedifference.cpp',

  'network/chat.cpp',
  'network/irc.cpp',
  'network/network.cpp',
  
  'ebox.cpp',

  'gui/animation.cpp',
  'gui/box.cpp',
  'gui/container.cpp',
  'gui/context-box.cpp',
  'gui/coordinate.cpp',
  'gui/cutscene.cpp',
  'gui/fadetool.cpp',
  'gui/lineedit.cpp',
  'gui/list.cpp',
  'gui/popup-box.cpp',
  'gui/rectarea.cpp',
  'gui/scroll-list.cpp',
  'gui/select-list.cpp',
  'gui/tabbed-box.cpp',
  'gui/tab-container.cpp',
  'gui/timer.cpp',
  'gui/widget.cpp',

  'ftalleg.cpp',
  'input/sdl/joystick.cpp',
  'input/sdl/keyboard.cpp',
  'input/sdl/touch.cpp',
  'sound/sdl/sound.cpp',
  'graphics/sdl/bitmap.cpp',

  'graphics/sdl2/bitmap.cpp',
  'input/sdl2/joystick.cpp',
  'input/sdl2/keyboard.cpp',
  'input/sdl2/touch.cpp',
  'sound/sdl2/sound.cpp',

  'libs/sfl/sfldir.c',
  'libs/sfl/sflmem.c',
  'libs/sfl/sfldate.c',
  'libs/sfl/sflfile.c',
  'libs/sfl/sflstr.c',
  'libs/sfl/sfluid.c',
  'libs/sfl/sfllist.c',
  'libs/sfl/sflnode.c',
  'libs/sfl/sflenv.c',
  'libs/sfl/sfltok.c',
  'libs/sfl/sflcvsb.c',
  'libs/sfl/sflsymb.c',
  'libs/sfl/sflconv.c',

  'libs/dumb/src/it/itorder.c',
  'libs/dumb/src/it/xmeffect.c',
  'libs/dumb/src/it/itrender.c',
  'libs/dumb/src/it/itread2.c',
  'libs/dumb/src/it/itunload.c',
  'libs/dumb/src/it/loadmod.c',
  'libs/dumb/src/it/loads3m.c',
  'libs/dumb/src/it/loadxm2.c',
  'libs/dumb/src/it/itload2.c',
  'libs/dumb/src/it/readmod2.c',
  'libs/dumb/src/it/reads3m2.c',
  'libs/dumb/src/it/loadmod2.c',
  'libs/dumb/src/it/loadxm.c',
  'libs/dumb/src/it/loads3m2.c',
  'libs/dumb/src/it/itload.c',
  'libs/dumb/src/it/itmisc.c',
  'libs/dumb/src/it/itread.c',
  'libs/dumb/src/it/readxm.c',
  'libs/dumb/src/it/readmod.c',
  'libs/dumb/src/it/reads3m.c',
  'libs/dumb/src/it/readxm2.c',
  'libs/dumb/src/core/makeduh.c',
  'libs/dumb/src/core/unload.c',
  'libs/dumb/src/core/loadduh.c',
  'libs/dumb/src/core/rawsig.c',
  'libs/dumb/src/core/rendduh.c',
  'libs/dumb/src/core/rendsig.c',
  'libs/dumb/src/core/duhlen.c',
  'libs/dumb/src/core/duhtag.c',
  'libs/dumb/src/core/atexit.c',
  'libs/dumb/src/core/readduh.c',
  'libs/dumb/src/core/register.c',
  'libs/dumb/src/core/dumbfile.c',
  'libs/dumb/src/helpers/sampbuf.c',
  'libs/dumb/src/helpers/stdfile.c',
  'libs/dumb/src/helpers/clickrem.c',
  'libs/dumb/src/helpers/silence.c',
  'libs/dumb/src/helpers/memfile.c',
  'libs/dumb/src/helpers/resample.c',

  'libs/gme/Ay_Apu.cpp',
  'libs/gme/Ay_Cpu.cpp',
  'libs/gme/Ay_Emu.cpp',
  'libs/gme/Blip_Buffer.cpp',
  'libs/gme/Classic_Emu.cpp',
  'libs/gme/Data_Reader.cpp',
  'libs/gme/Dual_Resampler.cpp',
  'libs/gme/Effects_Buffer.cpp',
  'libs/gme/Fir_Resampler.cpp',
  'libs/gme/Gb_Apu.cpp',
  'libs/gme/Gb_Cpu.cpp',
  'libs/gme/Gb_Oscs.cpp',
  'libs/gme/Gbs_Emu.cpp',
  'libs/gme/gme.cpp',
  'libs/gme/Gme_File.cpp',
  'libs/gme/Gym_Emu.cpp',
  'libs/gme/Hes_Apu.cpp',
  'libs/gme/Hes_Cpu.cpp',
  'libs/gme/Hes_Emu.cpp',
  'libs/gme/Kss_Cpu.cpp',
  'libs/gme/Kss_Emu.cpp',
  'libs/gme/Kss_Scc_Apu.cpp',
  'libs/gme/M3u_Playlist.cpp',
  'libs/gme/Multi_Buffer.cpp',
  'libs/gme/Music_Emu.cpp',
  'libs/gme/Nes_Apu.cpp',
  'libs/gme/Nes_Cpu.cpp',
  'libs/gme/Nes_Fme7_Apu.cpp',
  'libs/gme/Nes_Namco_Apu.cpp',
  'libs/gme/Nes_Oscs.cpp',
  'libs/gme/Nes_Vrc6_Apu.cpp',
  'libs/gme/Nsfe_Emu.cpp',
  'libs/gme/Nsf_Emu.cpp',
  'libs/gme/Sap_Apu.cpp',
  'libs/gme/Sap_Cpu.cpp',
  'libs/gme/Sap_Emu.cpp',
  'libs/gme/Sms_Apu.cpp',
  'libs/gme/Snes_Spc.cpp',
  'libs/gme/Spc_Cpu.cpp',
  'libs/gme/Spc_Dsp.cpp',
  'libs/gme/Spc_Emu.cpp',
  'libs/gme/Spc_Filter.cpp',
  'libs/gme/Vgm_Emu.cpp',
  'libs/gme/Vgm_Emu_Impl.cpp',
  'libs/gme/Ym2413_Emu.cpp',
  'libs/gme/Ym2612_Emu.cpp',

  'libs/7z/7zAlloc.c',
  'libs/7z/7zBuf.c',
  'libs/7z/7zBuf2.c',
  'libs/7z/7zCrc.c',
  'libs/7z/7zCrcOpt.c',
  'libs/7z/7zDec.c',
  'libs/7z/7zIn.c',
  'libs/7z/CpuArch.c',
  'libs/7z/LzmaDec.c',
  'libs/7z/Lzma2Dec.c',
  'libs/7z/Bra.c',
  'libs/7z/Bra86.c',
  'libs/7z/Bcj2.c',
  'libs/7z/7zFile.c',
  'libs/7z/7zStream.c',

  'libs/zip/ioapi.c',
  'libs/zip/unzip.c',
  'libs/zip/zip.c',
]

includes = include_directories('..')

rtech1_library = static_library('r-tech1', sources,
  include_directories: [includes, dumb_includes],
  dependencies: [sdl_dependency, freetype_dependency, zlib_dependency],
  )
