sources = [
  'configuration.cpp',
  'input/keyboard.cpp',
  'file-system.cpp',
  'debug.cpp',
  'funcs.cpp',
  'context.cpp',
  'tokenreader.cpp',
  'token.cpp',
  'exceptions/load_exception.cpp',
  'exceptions/exception.cpp',
  'graphics/bitmap.cpp',
  'graphics/gradient.cpp',
  'graphics/texture-cache.cpp',
  'system.cpp',
  'version.cpp',
  'argument.cpp',
  'init.cpp',
  'input/input-manager.cpp',
  'input/touch.cpp',
  'input/input-source.cpp',
  'input/joystick.cpp',
  'input/text-input.cpp',
  'sound/music.cpp',
  'sound/sound.cpp',
  'language-string.cpp',
  'font.cpp',
  'font_factory.cpp',
  'regex.cpp',
  'sound/audio.cpp',
  'menu/menu.cpp',
  'menu/font-info.cpp',
  'menu/menu_option.cpp',
  'menu/options.cpp',
  'menu/optionfactory.cpp',
  'loading.cpp',
  'directory.cpp',
  'thread.cpp',
  'utf.cpp',
  'system/sdl/init.cpp',
  'system/sdl2/init.cpp',
  'system/timer.cpp',
  'message-queue.cpp',
  'messages.cpp',
  'resource.cpp',
  'events.cpp',
  'sound/music-player.cpp',
  'sound/music-renderer.cpp',
  'console.cpp',
  'timedifference.cpp',

  'network/chat.cpp',
  'network/irc.cpp',
  'network/network.cpp',
  
  'ebox.cpp',

  'gui/animation.cpp',
  'gui/box.cpp',
  'gui/container.cpp',
  'gui/context-box.cpp',
  'gui/coordinate.cpp',
  'gui/cutscene.cpp',
  'gui/fadetool.cpp',
  'gui/lineedit.cpp',
  'gui/list.cpp',
  'gui/popup-box.cpp',
  'gui/rectarea.cpp',
  'gui/scroll-list.cpp',
  'gui/select-list.cpp',
  'gui/tabbed-box.cpp',
  'gui/tab-container.cpp',
  'gui/timer.cpp',
  'gui/widget.cpp',

  'ftalleg.cpp',
  'ftalleg_sdl2.cpp',
  'input/sdl/joystick.cpp',
  'input/sdl/keyboard.cpp',
  'input/sdl/touch.cpp',
  'sound/sdl/sound.cpp',
  'graphics/sdl/bitmap.cpp',

  'graphics/sdl2/bitmap.cpp',
  'input/sdl2/joystick.cpp',
  'input/sdl2/keyboard.cpp',
  'input/sdl2/touch.cpp',
  'sound/sdl2/sound.cpp',
  'sound/sdl2/music-renderer.cpp',

  'libs/7z/7zAlloc.c',
  'libs/7z/7zBuf.c',
  'libs/7z/7zBuf2.c',
  'libs/7z/7zCrc.c',
  'libs/7z/7zCrcOpt.c',
  'libs/7z/7zDec.c',
  'libs/7z/7zIn.c',
  'libs/7z/CpuArch.c',
  'libs/7z/LzmaDec.c',
  'libs/7z/Lzma2Dec.c',
  'libs/7z/Bra.c',
  'libs/7z/Bra86.c',
  'libs/7z/Bcj2.c',
  'libs/7z/7zFile.c',
  'libs/7z/7zStream.c',

  'libs/zip/ioapi.c',
  'libs/zip/unzip.c',
  'libs/zip/zip.c',

  'windows/file-system.cpp',
  'windows/system.cpp',
  'dkp/file-system.cpp',
  'dkp/init.cpp',
  'dkp/system.cpp',
  'dkp/thread.cpp',
  'ps3/file-system.cpp',
  'ps3/init.cpp',
  'ps3/system.cpp',
  
]

includes = include_directories('..')

subdir('libs/gme')
subdir('libs/dumb')

rtech1_library = static_library('r-tech1', sources,
  include_directories: [includes],
  dependencies: [sdl_dependency, zlib_dependency],
  link_with: [gme_library, dumb_library]
  )
